--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -63,13 +63,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
 
 @media only screen and (max-width: 1920px) {
   .contact {
     .content {
-
       img {
         max-width: $base-img-size * $xl-multiplier;
       }
@@ -141,6 +139,14 @@ footer {
 }
 
 @media only screen and (max-width: 375px) {
+  .contact {
+    .content {
+      img {
+        max-width: $base-img-size * $sm-multiplier;
+      }
+    }
+  }
+
   .half-page {
     width: 48%;
     min-width: $half-page-min-width;
