enlarged copyright footer, set a min-height to contact div, changed hero text to h2

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
-    <p>An all-women studio with the goal of providing beautiful, accessible, and functional design solutions.</p>
+    <h2>An all-women studio with the goal of providing beautiful, accessible, and functional design solutions.</h2>
 
     <button>Get to know us</button>
   </section>
