--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@ layout: default
 
             <div class="blue-line" />
 
-            <button>{{ side-module.title | escape }}'s Portfolio</button>
+            <a href=" {{ side-module.URL | escape }} " target="_blank"><button>{{ side-module.title | escape }}'s Portfolio</button></a>
             
           </li>
         {% endfor %}
