made hero image (relatively) responsive

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,8 +2,8 @@
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
-    <h2>An all-women studio with the goal of providing beautiful, accessible, and functional design solutions.</h2>
+    <h2>An all-women studio providing beautiful, accessible, and functional design solutions.</h2>
 
-    <button>Get to know us</button>
+    <!--<button>Get to know us</button>-->
   </section>
 </header>
