--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
 
   </section>
 
-  <section id="team">
+  <!--<section id="team">
     <header>
       <h1>Three women, three talents</h1>
       <p>Three's a magic number, after all.</p>
@@ -65,5 +65,5 @@ layout: default
       </ul>
 
     </div>
-  </section>
+  </section>-->
 </div>
