--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -33,7 +33,7 @@ $module-text-base-height: 14rem;
       right: $base-icon-offset * $xxl-multiplier;
       width: $base-icon-size * $xxl-multiplier;
       height: $base-icon-size * $xxl-multiplier;
-      background: $yellow;
+      background: $navy;
       border-radius: 50%;
 
       background-size: $base-icon-bg-size * $xxl-multiplier;
