--- a/_sass/partials/_small-module.scss
+++ b/_sass/partials/_small-module.scss
@@ -80,6 +80,7 @@ $module-text-padding-top: ($icon-size + 1);
       background: $navy;
       border-radius: 50%;
       z-index: 3;
+      background-size: cover;
     }
   }
 //}
