--- a/assets/main.scss
+++ b/assets/main.scss
@@ -50,13 +50,23 @@ $base-hero-section-max-size: 50rem;
     max-height: $base-hero-section-max-size * $xxl-multiplier;
     display: flex;
     align-items: center;
-    /*background-image: url( "/assets/images/hero/branches.svg" );
-    background-size: 100%;
-    background-repeat: no-repeat;*/
+    background: $navy;
+    color: $off-white;
+    background-image: url( "/assets/images/hero/branches-desktop.svg" );
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
     //background-attachment: fixed;
+
+    margin-bottom: 4rem;
     
     img {
       max-width: $base-logo-size * $xxl-multiplier;
+    }
+
+    h2 {
+      width: 30%;
+      min-width: 20rem;
     }
   }
 
@@ -105,10 +115,54 @@ $base-hero-section-max-size: 50rem;
   }
 }
 
+@media only screen and (max-width: 1024px) and (orientation: landscape) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-tablet-large-portrait.svg" );
+  }
+}
+
+
+@media only screen and (max-width: 1024px) and (orientation: portrait) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-tablet-large-portrait.svg" );
+  }
+}
+
+@media only screen and (max-width: 768px) and (orientation: portrait) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-tablet-portrait.svg" );
+  }
+}
+
 @media only screen and (max-width: 736px) { 
   #hero {
-    height: 100vh;
-    min-height: 35rem;
+    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+  }
+}
+
+/*@media only screen and (max-width: 736px) and (orientation: portrait) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+  }
+}*/
+
+
+@media only screen and (max-width: 736px) and (orientation: landscape) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+  }
+}
+
+@media only screen and (max-width: 640px) and (orientation: portrait) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+    //background-size: contain;
+  }
+}
+
+@media only screen and (max-width: 640px) and (orientation: landscape) { 
+  #hero {
+    background-image: url( "/assets/images/hero/branches-mobile-small-landscape.svg" );
   }
 }
 
