fixed image paths

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,23 @@
 <header id="hero">
+  <!--<div class="svg-container">
+    <svg width="100%" height="100%">
+      <circle class="light-base light light-1"  />
+      <circle class="light-glow light light-1" />
+
+      <circle class="light-base light light-2"  />
+      <circle class="light-glow light light-2" />
+
+      <circle class="light-base light light-3"  />
+      <circle class="light-glow light light-3" />
+
+      <circle class="light-base light light-4"  />
+      <circle class="light-glow light light-4" />
+
+      <circle class="light-base light light-5"  />
+      <circle class="light-glow light light-5" />
+    </svg>
+  </div>-->
+
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
