--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,6 +15,10 @@ $base-logo-size: 22rem;
 $base-hero-section-min-size: 45rem;
 $base-hero-section-max-size: 50rem;
 
+$light-radius: 1.25rem;
+$light-glow-radius: $light-radius * 2;
+$glow-duration: 1.75s;
+
 //@media only screen and (max-width: 2560px) {
   html {
     overflow-x: hidden;
@@ -38,6 +42,90 @@ $base-hero-section-max-size: 50rem;
     width: 85%;
   }
 
+  .svg-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    //z-index: -1;
+
+    .light {
+      fill: $yellow;
+      opacity: 1;
+      r: $light-radius * $xxl-multiplier;
+    }
+
+    .light-glow {
+      opacity: 0.5;
+      r: $light-glow-radius * $xxl-multiplier; 
+
+      @-webkit-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xxl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; color: $off-white; }
+      }
+
+      @-moz-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xxl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; color: $off-white; }
+      }
+
+      @keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xxl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xxl-multiplier; color: $off-white; }
+      }
+
+      opacity: 0.25;
+      -webkit-animation: glow ease-in 1; 
+      -moz-animation: glow ease-in 1; 
+      animation: glow ease-in 1; 
+      -webkit-animation-duration: $glow-duration;
+      -moz-animation-duration: $glow-duration;
+      animation-duration: $glow-duration;
+      animation-iteration-count: infinite;
+    }
+
+    .light-1 { 
+      cx: 30%; 
+      cy: 50%;
+    }
+
+    .light-2 {
+      cx: 85%; 
+      cy: 65%;
+      -webkit-animation-delay: 0.5s; 
+      animation-delay: 0.5s;
+    }
+
+    .light-3 { 
+      cx: 85%; 
+      cy: 25%;
+      -webkit-animation-delay: 0.75s; 
+      animation-delay: 0.75s;
+    }
+
+    .light-4 {
+      cx: 20%; 
+      cy: 30%;
+      -webkit-animation-delay: 1s; 
+      animation-delay: 1s;
+    }
+
+    .light-5 { 
+      cx: 10%; 
+      cy: 80%;
+      -webkit-animation-delay: 1.25s; 
+      animation-delay: 1.25s;
+    }
+  }
+
   header#hero {
     width: 100%;
   }
@@ -50,15 +138,15 @@ $base-hero-section-max-size: 50rem;
     max-height: $base-hero-section-max-size * $xxl-multiplier;
     display: flex;
     align-items: center;
-    background: $navy;
-    color: $off-white;
-    background-image: url( "/assets/images/hero/branches-desktop.svg" );
+    //background: $navy;
+    //color: $off-white;
+    background-image: url( "assets/images/hero/branches-desktop.svg" );
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
     //background-attachment: fixed;
 
-    margin-bottom: 4rem;
+    //margin-bottom: 4rem;
     
     img {
       max-width: $base-logo-size * $xxl-multiplier;
@@ -90,6 +178,41 @@ $base-hero-section-max-size: 50rem;
       max-width: $base-logo-size * $xl-multiplier;
     }
   }
+
+  .svg-container {
+    .light {
+      r: $light-radius * $xl-multiplier;
+    }
+
+    .light-glow {
+      opacity: 0.5;
+      r: $light-glow-radius * $xl-multiplier; 
+
+      @-webkit-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; color: $off-white; }
+      }
+
+      @-moz-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; color: $off-white; }
+      }
+
+      @keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $xl-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $xl-multiplier; color: $off-white; }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 1440px) {
@@ -106,6 +229,41 @@ $base-hero-section-max-size: 50rem;
       max-width: $base-logo-size;
     }
   }
+
+  .svg-container {
+    .light {
+      r: $light-radius;
+    }
+
+    .light-glow {
+      opacity: 0.5;
+      r: $light-glow-radius; 
+
+      @-webkit-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius; color: $off-white; }
+      }
+
+      @-moz-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius; color: $off-white; }
+      }
+
+      @keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius; color: $off-white; }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 1024px) { 
@@ -117,20 +275,20 @@ $base-hero-section-max-size: 50rem;
 
 @media only screen and (max-width: 1024px) and (orientation: landscape) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-tablet-large-portrait.svg" );
+    background-image: url( "assets/images/hero/branches-tablet-large-portrait.svg" );
   }
 }
 
 
 @media only screen and (max-width: 1024px) and (orientation: portrait) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-tablet-large-portrait.svg" );
+    background-image: url( "assets/images/hero/branches-tablet-large-portrait.svg" );
   }
 }
 
 @media only screen and (max-width: 768px) and (orientation: portrait) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-tablet-portrait.svg" );
+    background-image: url( "assets/images/hero/branches-tablet-portrait.svg" );
   }
 }
 
@@ -149,20 +307,20 @@ $base-hero-section-max-size: 50rem;
 
 @media only screen and (max-width: 736px) and (orientation: landscape) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+    background-image: url( "assets/images/hero/branches-mobile-landscape.svg" );
   }
 }
 
 @media only screen and (max-width: 640px) and (orientation: portrait) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-mobile-landscape.svg" );
+    background-image: url( "assets/images/hero/branches-mobile-landscape.svg" );
     //background-size: contain;
   }
 }
 
 @media only screen and (max-width: 640px) and (orientation: landscape) { 
   #hero {
-    background-image: url( "/assets/images/hero/branches-mobile-small-landscape.svg" );
+    background-image: url( "assets/images/hero/branches-mobile-small-landscape.svg" );
   }
 }
 
@@ -172,76 +330,39 @@ $base-hero-section-max-size: 50rem;
       max-width: $base-logo-size * $sm-multiplier;
     }
   }
-}
 
+  .svg-container {
+    .light {
+      r: $light-radius * $sm-multiplier;
+    }
 
+    .light-glow {
+      opacity: 0.5;
+      r: $light-glow-radius * $sm-multiplier; 
 
-/*body {
-  margin:0 auto;
-  font-family: $body-font-family;
-  color: $navy;
-  background: $off-white;
-}
+      @-webkit-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $sm-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; color: $off-white; }
+      }
 
-::selection {
-    background-color: $yellow;
-    color: $navy;
-}
+      @-moz-keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $sm-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; color: $off-white; }
+      }
 
-.bwc-header {
-  height: 90vh;
-  max-height: 60rem;
-}
-
-.bwc-section {
-  width: 100%;
-  text-align:center;
-}
-
-#hero {
-
-  #logo {
-    margin-top: 20vh;
-    width: 25vw;
-    min-width:20rem;
-  }
-
-  /*p { 
-    margin: 0 auto;
-    width: 20vw;
-    min-width: 18rem;
-  }*/
-//}
-
-/*.inline-buttons {
-  margin: 0 auto;
-  width: 40vw;
-  height:auto;
-  background: black;
-}*/
-
-/*@media only screen and (max-height: 1266px) and (orientation: portrait){
-  .bwc-header {
-    //height: 60vh;
-    max-height: 40rem;
-  }
-
-  #hero {
-    #logo {
-      margin-top: 15vh;
+      @keyframes glow { 
+        0% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; } 
+        25% { opacity: 0.25; }
+        50% { opacity: 0.0; r: $light-radius * 1.25 * $sm-multiplier; } 
+        75% { opacity: 0.25; }
+        100% { opacity: 0.5; r: $light-glow-radius * $sm-multiplier; color: $off-white; }
+      }
     }
   }
-}*/
-
-/*@media only screen and (max-height: 1024px){
-  .bwc-header {
-    //height: 60vh;
-    max-height: 40rem;
-  }
-
-  #hero {
-    #logo {
-      margin-top: 15vh;
-    }
-  }
-}*/
+}
