lights reposition on window resize

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,5 +1,5 @@
 <header id="hero">
-  <!--<div class="svg-container">
+  <div id="lights" class="svg-container">
     <svg width="100%" height="100%">
       <circle class="light-base light light-1"  />
       <circle class="light-glow light light-1" />
@@ -16,7 +16,7 @@
       <circle class="light-base light light-5"  />
       <circle class="light-glow light light-5" />
     </svg>
-  </div>-->
+  </div>
 
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
