--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
               <p>{{ small-module.text | escape }}</p>
             </div>
 
-            <div class="blue-line" />
+            <!--<div class="blue-line" />-->
           </li>
         {% endfor %}
       </ul>
@@ -35,7 +35,7 @@ layout: default
 
   </section>
 
-  <!--<section id="team">
+  <section id="team">
     <header>
       <h1>Three women, three talents</h1>
       <p>Three's a magic number, after all.</p>
@@ -56,7 +56,7 @@ layout: default
               </p>
             </div>
 
-            <div class="blue-line" />
+            <!--<div class="blue-line" />-->
 
             <a href=" {{ side-module.URL | escape }} " target="_blank"><button>{{ side-module.title | escape }}'s Portfolio</button></a>
             
@@ -65,5 +65,5 @@ layout: default
       </ul>
 
     </div>
-  </section>-->
+  </section>
 </div>
